# rpi-home

./: .gitignore  README.md  config.json  example_config.json  todo.md
custom_components/: readme.md
custom_components/rpi_home/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  rpi_sensor_entity.py  sensor.py  strings.json
custom_components/rpi_home/translations/: en.json
img/source/: icon.psd  logo.psd
modules/ha_tiny/: .coveragerc  pyproject.toml
modules/ha_tiny/src/ha_tiny/: extras.py
modules/rpi_home/: pyproject.toml  pytest.ini
modules/rpi_home/src/rpi_home/: const.py  rpi_home_device.py  rpi_home_driver.py  rpi_home_sampler.py  utils.py
pip/: pyproject.toml
pip/rpi_home/: __init__.py  const.py  pyproject.toml  rpi_home_device.py  rpi_home_driver.py  rpi_home_entity.py  rpi_home_sampler.py  rpi_home_sensor_builder.py  setup.py  utils.py
pip/rpi_home/rpi_home/: __init__.py  const.py  driver.py  rpi_control.py  rpi_home_device.py  rpi_home_driver.py  rpi_home_sensor_builder.py  rpi_sensor.py  rpi_sensor_builder.py  rpi_sensor_device.py  version.py
pip/rpi_sensor/: setup.py
pip/rpi_sensor/rpi_sensor/: __init__.py  const.py  rpi_sensor.py  rpi_sensor_device.py  rpi_sensor_host.py  utils.py  version.py
pip/src/rpi_home/: __init__.py  const.py  rpi_home_driver.py  utils.py
platform/drivers/host/: pyproject.toml  readme.md
platform/drivers/host/rpi_home_host/: sensor.py
platform/drivers/hts221/: pyproject.toml  readme.md
platform/drivers/hts221/rpi_home_hts221/: sensor.py
platform/drivers/max31865/: pyproject.toml  readme.md
platform/drivers/max31865/rpi_home_max31865/: __init__.py  const.py  sensor.py
platform/drivers/si7021/: pyproject.toml
platform/drivers/si7021/rpi_home_si7021/: sensor.py
platform/services/discovery/: browser.py  const.py  discovery.py  discovery_broadcast.py  discovery_browser.py  discovery_listener.py  discovery_listener.service  discovery_registration.py  discovery_registration.service  install.bash  rpi_home_discovery.service
platform/services/sampler/: install.bash  rpi_home_sampler.service  sampler.py
platform/www/: .gitignore  control.py
rpi/: readme.md
rpi/discovery/: discovery_broadcast.py  discovery_listener.service  install.bash
rpi/drivers/SI7021/: setup.py
rpi/drivers/SI7021/SI7021/: __init__.py  driver.py
rpi/drivers/SI7021/rpi_home_SI7021/: driver.py
rpi/drivers/host/: pyproject.toml
rpi/drivers/host/host/: driver.py  version.py
rpi/drivers/host/rpi_home_host/: driver.py  version.py
rpi/drivers/rpi_sensor_host/: setup.py
rpi/drivers/rpi_sensor_host/rpi_sensor_host/: __init__.py  rpi_sensor_host.py  version.py
rpi/drivers/si7021/: pyproject.toml
rpi/drivers/si7021/rpi_home_si7021/: driver.py  sensor.py  version.py
rpi/www/: control.py  index.html  readme.md
