[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-home"
version = "2.0.16"
description = "python module for rpi-home"
readme = "readme.md"
requires-python = ">=3.8"
license = {file = "license.txt"}
authors = [ {name = "Bretton Wade", email = "bretton.wade@irdev.us" } ]
maintainers = [ {name = "Bretton Wade", email = "bretton.wade@irdev.us" } ]
dependencies = ["homeassistant", "toml", "zeroconf"]

[project.urls]
"Homepage" = "https://github.com/brettonw/rpi_home"
#"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
#"Funding" = "https://donate.pypi.org"
#"Say Thanks!" = "http://saythanks.io/to/example"
#"Source" = "https://github.com/pypa/sampleproject/"

[tool.setuptools]
# if there are data files included in your packages that need to be installed, specify them here.
# for instance:
# package-data = {"sample" = ["*.dat"]}
