[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-home-host"
version = "1.1.0"
description = "host driver for rpi-home"
readme = "readme.md"
requires-python = ">=3.7"
license = {file = "license.txt"}
authors = [ {name = "Bretton Wade", email = "bretton.wade@irdev.us" } ]
maintainers = [ {name = "Bretton Wade", email = "bretton.wade@irdev.us" } ]

# these dependencies were installed with rpi_home, we shouldn't need them here
#dependencies = ["homeassistant", "rpi_home", "toml"]

[project.urls]
#"Homepage" = "https://github.com/pypa/sampleproject"
#"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
#"Funding" = "https://donate.pypi.org"
#"Say Thanks!" = "http://saythanks.io/to/example"
#"Source" = "https://github.com/pypa/sampleproject/"

[tool.setuptools]
# if there are data files included in your packages that need to be installed, specify them here.
# for instance:
# package-data = {"sample" = ["*.dat"]}
